fix(card): adding gap to rh-card css, demo css

--- a/elements/rh-card/demo/demo.css
+++ b/elements/rh-card/demo/demo.css
@@ -35,14 +35,12 @@ rh-card.bar::part(header) {
   font-size: var(--rh-font-size-body-text-md, 1rem);
 }
 
-rh-card.full::part(header),
 rh-card.full::part(header) {
   padding: 0;
 }
 
 rh-card.full :is(h1, h2, h3, h4, h5, h6)[slot="header"] {
   padding-inline: var(--rh-space-xl, 24px);
-  padding-block-start: var(--rh-space-lg, 16px);
 }
 
 rh-card.full img {
